# claude-code-guardian

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/commands/: add-default-rule.md
.github/workflows/: test.yml
ccguardian/: __init__.py  cli.py  rules.py
ccguardian/cli/: hook_command.py  main.py  rules_command.py
ccguardian/config/: __init__.py  default.yml  factory.py  loader.py  manager.py  merger.py  models.py  types.py
docs/: design.md
scripts/: format.sh  lint.sh
tests/: CLAUDE.md  __init__.py  conftest.py  utils.py
tests/integration/: test_cli_integration.py  test_config_factory_integration.py  test_config_pipeline.py
tests/unit/: test_cli.py  test_cli_rules_formatting.py  test_config_factory.py  test_config_loader.py  test_config_merger.py  test_config_models.py  test_engine.py  test_rules.py
